# housemd

./: LICENSE  README.md  housemd-config.json  requirements.txt  setup.cfg  test.py
.github/workflows/: deploy_docs.yml
docs/: housemd-config.json
docs/content/: index.md
docs/templates/: base.html
src/: generator.py
src/housemd/: __init__.py  __main__.py  builder.py  generator.py  init.py  live.py
test/content/: index.md
test/content/blogs/: index.md
test/templates/: index.html
