[metadata]
name = housemd
version = attr: housemd.version
author = Saksham
author_email = thesxmdev@proton.me
description = A simple static file generator
long_description = file: README.md
keywords = static, file, generator
license = MIT
classifiers =
	Programming Language :: Python :: 3

[options]
package_dir = 
	=src
packages = find:
install_requires = 
	markdown
	markdown-katex
	pygments
	watchdog

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	housemd-build = housemd.__main__:_build
	housemd-live = housemd.__main__:_live
	housemd-init = housemd.__main__:_init
